Implemented Random Flip for random player

--- a/Rubik's Flip.ipynb
+++ b/Rubik's Flip.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "8447cde4",
+   "execution_count": 98,
+   "id": "eb8c2665",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n"
+    "import numpy as np\n",
+    "import random"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "651fb151",
+   "id": "0f3ef400",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "eea08cb2",
+   "id": "03f312e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "c62d2521",
+   "id": "76741a80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "3d3470d0",
+   "id": "25a83e17",
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "eb6b39f7",
+   "id": "2778eef8",
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "44163983",
+   "id": "4082f9f8",
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "49ec98c4",
+   "id": "62fb1ea4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "44ac2f66",
+   "id": "6738fab1",
    "metadata": {},
    "outputs": [
     {
@@ -249,9 +250,9 @@
     "# while not isValidMove(current_State,operator):\n",
     "#     print(\"Please input your move:\")\n",
     "#     print(\"Row(0-3)\")\n",
+    "print_State(current_State)\n",
     "\n",
-    "    \n",
-    "\n",
+    "#flip positions for AI\n",
     "def flip(state, userType):\n",
     "    if userType==USER_RED or userType==USER_BLUE:\n",
     "        array=np.array(state.cell)\n",
@@ -290,6 +291,10 @@
     "                    \n",
     "            print(valid_Neighbours)\n",
     "            \n",
+    "            \n",
+    "            #Implemented upto finding valid neighbours\n",
+    "        \n",
+    "            \n",
     "\n",
     "flip(current_State, userType)\n",
     "    \n",
@@ -298,8 +303,114 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 155,
+   "id": "7335d9e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------------\n",
+      "|   |   | R |   |\n",
+      "------------------\n",
+      "| B |   |   |   |\n",
+      "------------------\n",
+      "| B |   | R |   |\n",
+      "------------------\n",
+      "|   | B |   | W |\n",
+      "------------------\n",
+      "2\n",
+      "0\n",
+      "2\n",
+      "[[2, 1], [3, 0]]\n",
+      "[3, 0]\n",
+      "------------------\n",
+      "|   |   | R |   |\n",
+      "------------------\n",
+      "| B |   |   |   |\n",
+      "------------------\n",
+      "|   |   | R |   |\n",
+      "------------------\n",
+      "| R | B |   | W |\n",
+      "------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# operator.row=3\n",
+    "# operator.col=3\n",
+    "\n",
+    "# makeMove(current_State,operator,PROGRAM_WHITE)\n",
+    "print_State(current_State)\n",
+    "\n",
+    "def randomFlip(state, userType):\n",
+    "    if userType==PROGRAM_WHITE or userType==PROGRAM_YELLOW:\n",
+    "        element=3\n",
+    "        while element!=1 and element!=2:\n",
+    "            randomRow=random.randint(0,3)\n",
+    "            randomCol=random.randint(0,3)\n",
+    "            element=state.cell[randomRow][randomCol]\n",
+    "        \n",
+    "        #get out of loop if you get other than 1 or 2 and find the neighbour and flip\n",
+    "        print(randomRow)\n",
+    "        print(randomCol)\n",
+    "        print(element)\n",
+    "        up=randomRow-1\n",
+    "        down=randomRow+1\n",
+    "        left=randomCol-1\n",
+    "        right=randomCol+1\n",
+    "            \n",
+    "        neighbours=[[randomRow, left], [randomRow, right], [up, randomCol],[down,randomCol]]\n",
+    "        valid_Neighbours=[]\n",
+    "        for neighbour in neighbours:\n",
+    "            operator.row=neighbour[0]\n",
+    "            operator.col=neighbour[1]\n",
+    "            if isValidMove(state, operator):\n",
+    "                valid_Neighbours.append(neighbour)\n",
+    "\n",
+    "        print(valid_Neighbours)\n",
+    "        \n",
+    "        #Now choosing random neighbor to flip\n",
+    "        \n",
+    "        randomNeighbourIndex=random.randint(0,len(valid_Neighbours)-1)\n",
+    "        randomNeighbour=valid_Neighbours[randomNeighbourIndex]\n",
+    "        print(randomNeighbour)\n",
+    "        #flipping opposite color to the neighbour space \n",
+    "        if element==1:\n",
+    "            state.cell[randomNeighbour[0]][randomNeighbour[1]]=2\n",
+    "            #setting the flipped area to blank\n",
+    "            state.cell[randomRow][randomCol]=0\n",
+    "        \n",
+    "        if element==2:\n",
+    "            state.cell[randomNeighbour[0]][randomNeighbour[1]]=1\n",
+    "            #setting the flipped area to blank\n",
+    "            state.cell[randomRow][randomCol]=0\n",
+    "            \n",
+    "        \n",
+    "            \n",
+    "        \n",
+    "        \n",
+    "randomFlip(current_State, PROGRAM_WHITE)\n",
+    "print_State(current_State)    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "1346bc41",
+   "id": "bc1b323c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Random move for randomplayer- two ways= 1. selecting random rows and columns 2. calling a fundtion for randomMove. \n",
+    "#if player= random, randomMove call\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59cc1070",
    "metadata": {},
    "outputs": [],
    "source": []
