--- a/Rubik's Flip.ipynb
+++ b/Rubik's Flip.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "eb8c2665",
+   "id": "b32f47b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "0f3ef400",
+   "id": "683978db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,8 +41,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "03f312e1",
+   "execution_count": 185,
+   "id": "9fa3b4e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,14 +53,14 @@
     "PROGRAM_WHITE=3\n",
     "PROGRAM_YELLOW=4\n",
     "\n",
-    "TIE=3\n",
+    "TIE=5\n",
     "MAXEVAL=1000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "76741a80",
+   "execution_count": 163,
+   "id": "bb8f4791",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,17 +72,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "id": "25a83e17",
+   "execution_count": 171,
+   "id": "0a5c5cb1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[0, 0, 0, 0], [0, 1, 0, 0], [0, 1, 0, 0], [0, 2, 2, 0]]"
+       "[[0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0]]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,8 +94,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "2778eef8",
+   "execution_count": 172,
+   "id": "a37d0e55",
    "metadata": {},
    "outputs": [
     {
@@ -105,11 +105,11 @@
       "------------------\n",
       "|   |   |   |   |\n",
       "------------------\n",
-      "|   | R |   |   |\n",
+      "|   |   |   |   |\n",
       "------------------\n",
-      "|   | R |   |   |\n",
+      "|   |   |   |   |\n",
       "------------------\n",
-      "|   | B |   |   |\n",
+      "|   |   |   |   |\n",
       "------------------\n"
      ]
     }
@@ -131,7 +131,7 @@
     "            elif state.cell[i][j]==PROGRAM_WHITE:\n",
     "                print(\"| W \", end=\"\")\n",
     "            elif state.cell[i][j]==PROGRAM_YELLOW:\n",
-    "                print(\"| Y  \", end=\"\")\n",
+    "                print(\"| Y \", end=\"\")\n",
     "                \n",
     "        print(\"|\")\n",
     "        for i in range(18):\n",
@@ -144,19 +144,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "id": "4082f9f8",
+   "execution_count": 173,
+   "id": "f5630605",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-80-83fde796b950>, line 35)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-80-83fde796b950>\"\u001b[1;36m, line \u001b[1;32m35\u001b[0m\n\u001b[1;33m    return 0\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#User turn\n",
     "# print(\"Please tell the row of the tile you want to flip\")\n",
@@ -189,58 +180,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "id": "62fb1ea4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if(isValidMove(current_State, operator)):\n",
-    "    makeMove(current_State, operator, userType)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "id": "6738fab1",
+   "execution_count": 191,
+   "id": "2c80d858",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1 1]\n",
-      " [2 1]\n",
-      " [1 0]\n",
-      " [3 1]\n",
-      " [3 2]]\n",
-      "1\n",
-      "1\n",
-      "[[1, 0], [1, 2], [0, 1], [2, 1]]\n",
-      "[[1, 2], [0, 1]]\n",
-      "2\n",
-      "1\n",
-      "[[2, 0], [2, 2], [1, 1], [3, 1]]\n",
-      "[[2, 0], [2, 2]]\n",
-      "1\n",
-      "0\n",
-      "[[1, -1], [1, 1], [0, 0], [2, 0]]\n",
-      "[[0, 0], [2, 0]]\n",
-      "3\n",
-      "1\n",
-      "[[3, 0], [3, 2], [2, 1], [4, 1]]\n",
-      "[[3, 0]]\n",
-      "3\n",
-      "2\n",
-      "[[3, 1], [3, 3], [2, 2], [4, 2]]\n",
-      "[[3, 3], [2, 2]]\n",
       "------------------\n",
       "|   |   |   |   |\n",
       "------------------\n",
-      "| B | R |   |   |\n",
+      "|   | Y |   |   |\n",
       "------------------\n",
-      "|   | R |   |   |\n",
+      "|   | Y |   | R |\n",
       "------------------\n",
-      "|   | B | B |   |\n",
+      "|   |   | B |   |\n",
+      "------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Making a move(helper cell)\n",
+    "operator.row=2\n",
+    "operator.col=3\n",
+    "userType=USER_RED\n",
+    "if(isValidMove(current_State, operator)):\n",
+    "    makeMove(current_State, operator, userType)\n",
+    "\n",
+    "print_State(current_State)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "id": "5ac5fbdd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------------\n",
+      "|   |   |   |   |\n",
+      "------------------\n",
+      "|   |   |   |   |\n",
+      "------------------\n",
+      "|   |   |   |   |\n",
+      "------------------\n",
+      "|   |   |   |   |\n",
+      "------------------\n",
+      "[]\n",
+      "------------------\n",
+      "|   |   |   |   |\n",
+      "------------------\n",
+      "|   |   |   |   |\n",
+      "------------------\n",
+      "|   |   |   |   |\n",
+      "------------------\n",
+      "|   |   |   |   |\n",
       "------------------\n"
      ]
     }
@@ -303,8 +301,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
-   "id": "7335d9e6",
+   "execution_count": 199,
+   "id": "1b976337",
    "metadata": {},
    "outputs": [
     {
@@ -312,32 +310,117 @@
      "output_type": "stream",
      "text": [
       "------------------\n",
-      "|   |   | R |   |\n",
+      "|   |   |   |   |\n",
       "------------------\n",
-      "| B |   |   |   |\n",
+      "|   | Y |   |   |\n",
       "------------------\n",
-      "| B |   | R |   |\n",
+      "|   | Y |   | R |\n",
       "------------------\n",
-      "|   | B |   | W |\n",
+      "|   |   | B |   |\n",
       "------------------\n",
-      "2\n",
-      "0\n",
-      "2\n",
-      "[[2, 1], [3, 0]]\n",
-      "[3, 0]\n",
+      "1\n",
       "------------------\n",
-      "|   |   | R |   |\n",
+      "|   |   |   |   |\n",
       "------------------\n",
-      "| B |   |   |   |\n",
+      "|   | Y |   |   |\n",
       "------------------\n",
-      "|   |   | R |   |\n",
+      "|   | Y |   | R |\n",
       "------------------\n",
-      "| R | B |   | W |\n",
+      "|   |   | B |   |\n",
       "------------------\n"
      ]
     }
    ],
    "source": [
+    "#Flippable fucntion\n",
+    "print_State(current_State)\n",
+    "def isFlippable(state,userType):\n",
+    "    if userType==USER_RED or userType==USER_BLUE:\n",
+    "        value1=1\n",
+    "        value2=2\n",
+    "    if userType==PROGRAM_YELLOW or userType==PROGRAM_WHITE:\n",
+    "        value1=3\n",
+    "        value2=4\n",
+    "    array=np.array(state.cell)\n",
+    "    opponent_Tiles1=np.argwhere(array==value1)\n",
+    "    opponent_Tiles2=np.argwhere(array==value2)\n",
+    "    opponent_Tiles=np.concatenate((opponent_Tiles1, opponent_Tiles2))\n",
+    "\n",
+    "    list_neighbours=[]\n",
+    "    for i in opponent_Tiles:\n",
+    "#             print(i[0])\n",
+    "        up=i[0]-1\n",
+    "        down=i[0]+1\n",
+    "        left=i[1]-1\n",
+    "        right=i[1]+1\n",
+    "\n",
+    "        neighbours=[[i[0], left], [i[0], right], [up, i[1]],[down,i[1]]]\n",
+    "#             print(i[1])\n",
+    "#             print(neighbours)\n",
+    "\n",
+    "\n",
+    "    #make a tile and its neighbour(create a object of each opponent tile and make a list)\n",
+    "    #now findValidneighbours\n",
+    "\n",
+    "        #Now check if the neighbors are valid\n",
+    "        valid_Neighbours=[]\n",
+    "        for neighbour in neighbours:\n",
+    "            operator.row=neighbour[0]\n",
+    "            operator.col=neighbour[1]\n",
+    "            if isValidMove(state, operator):\n",
+    "                valid_Neighbours.append(neighbour)\n",
+    "\n",
+    "#             print(valid_Neighbours)\n",
+    "        list_neighbours.append(valid_Neighbours)\n",
+    "\n",
+    "#         print(list_neighbours)\n",
+    "    if len(list_neighbours)!=0:\n",
+    "        return 1\n",
+    "    elif len(list_neighbours)==0:\n",
+    "        return 0\n",
+    "        \n",
+    "print(isFlippable(current_State, PROGRAM_WHITE))\n",
+    "print_State(current_State)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "id": "e343daeb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------------\n",
+      "|   |   |   |   |\n",
+      "------------------\n",
+      "|   | Y |   |   |\n",
+      "------------------\n",
+      "|   | Y |   |   |\n",
+      "------------------\n",
+      "|   |   |   | R |\n",
+      "------------------\n",
+      "3\n",
+      "3\n",
+      "1\n",
+      "[[3, 2], [2, 3]]\n",
+      "[3, 2]\n",
+      "------------------\n",
+      "|   |   |   |   |\n",
+      "------------------\n",
+      "|   | Y |   |   |\n",
+      "------------------\n",
+      "|   | Y |   |   |\n",
+      "------------------\n",
+      "|   |   | B |   |\n",
+      "------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "#flip for random player\n",
     "# operator.row=3\n",
     "# operator.col=3\n",
     "\n",
@@ -397,20 +480,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bc1b323c",
+   "execution_count": 182,
+   "id": "b104e2b2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------------\n",
+      "|   |   |   |   |\n",
+      "------------------\n",
+      "|   |   |   |   |\n",
+      "------------------\n",
+      "|   | Y |   | B |\n",
+      "------------------\n",
+      "|   |   |   |   |\n",
+      "------------------\n",
+      "------------------\n",
+      "|   |   |   |   |\n",
+      "------------------\n",
+      "|   | Y |   |   |\n",
+      "------------------\n",
+      "|   | Y |   | B |\n",
+      "------------------\n",
+      "|   |   |   |   |\n",
+      "------------------\n"
+     ]
+    }
+   ],
    "source": [
     "#Random move for randomplayer- two ways= 1. selecting random rows and columns 2. calling a fundtion for randomMove. \n",
     "#if player= random, randomMove call\n",
-    "\n"
+    "\n",
+    "#check terminal if not it's gonna run infinite loop\n",
+    "print_State(current_State)\n",
+    "def randomMove(state, userType):\n",
+    "    while True:\n",
+    "        randomRow=random.randint(0,3)\n",
+    "        randomCol=random.randint(0,3)\n",
+    "        operator.row=randomRow\n",
+    "        operator.col=randomCol\n",
+    "\n",
+    "        if not isValidMove(state, operator):\n",
+    "            randomRow=random.randint(0,3)\n",
+    "            randomCol=random.randint(0,3)\n",
+    "            operator.row=randomRow\n",
+    "            operator.col=randomCol\n",
+    "        if isValidMove(state,operator):\n",
+    "            state.cell[operator.row][operator.col]=userType\n",
+    "            break\n",
+    "            \n",
+    "#         if makeMove(current_State, operator, userType):\n",
+    "#             break\n",
+    "\n",
+    "randomMove(current_State, PROGRAM_YELLOW)\n",
+    "print_State(current_State)            \n",
+    "            \n",
+    "            \n",
+    "        \n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "id": "041fc3d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def isTerminal(s):\n",
+    "    #if white:\n",
+    "        #check if blue/red flippable(locked):\n",
+    "        #if blue/red locked:\n",
+    "            #check for at least 3 in a row for blue/red\n",
+    "        #check isTerminal everytime after one flips and inserts \n",
+    "    userType=USER_RED\n",
+    "    if not isFlippable(s,userType):\n",
+    "        for line in range(0,4):\n",
+    "            #check for row completion\n",
+    "            if s.cell[line][0]!=BLANK and s.cell[line][0]==s.cell[line][1] and s.cell[line][1]==s.cell[line][2]:\n",
+    "                return s.cell[line][0] #this will return R,B,W,or Y and thats how we know who won\n",
+    "\n",
+    "            if s.cell[line][1]!=BLANK and s.cell[line][1]==s.cell[line][2] and s.cell[line][2]==s.cell[line][3]:\n",
+    "                return s.cell[line][1]\n",
+    "\n",
+    "            #check for column completion\n",
+    "            if s.cell[0][line]!=BLANK and s.cell[0][line]==s.cell[1][line] and s.cell[1][line]==s.cell[2][line]:\n",
+    "                return s.cell[0][line]\n",
+    "\n",
+    "            if s.cell[1][line]!=BLANK and s.cell[1][line]==s.cell[2][line] and s.cell[2][line]==s.cell[3][line]:\n",
+    "                return s.cell[1][line]\n",
+    "\n",
+    "\n",
+    "            #Check for diagonal- Total 8 diagonal ways\n",
+    "        if s.cell[2][0]!=BLANK and s.cell[2][0]==s.cell[1][1] and s.cell[1][1]==s.cell[0][2]:\n",
+    "            return s.cell[2][0]\n",
+    "\n",
+    "        if s.cell[2][1]!=BLANK and s.cell[2][1]==s.cell[1][2] and s.cell[1][2]==s.cell[0][3]:\n",
+    "            return s.cell[2][2]\n",
+    "\n",
+    "        if s.cell[3][0]!=BLANK and s.cell[3][0]==s.cell[2][1] and s.cell[2][1]==s.cell[1][2]:\n",
+    "            return s.cell[3][0]\n",
+    "\n",
+    "        if s.cell[3][1]!=BLANK and s.cell[3][1]==s.cell[2][2] and s.cell[2][2]==s.cell[1][3]:\n",
+    "            return s.cell[3][1]\n",
+    "\n",
+    "        #Another 4 ways through another side \\\n",
+    "\n",
+    "        if s.cell[0][1]!=BLANK and s.cell[0][1]==s.cell[1][2] and s.cell[1][2]==s.cell[2][3]:\n",
+    "            return s.cell[0][1]\n",
+    "\n",
+    "        if s.cell[0][0]!=BLANK and s.cell[0][0]==s.cell[1][1] and s.cell[2][2]==s.cell[2][2]:\n",
+    "            return s.cell[0][0]\n",
+    "\n",
+    "        if s.cell[1][1]!=BLANK and s.cell[1][1]==s.cell[2][2] and s.cell[2][2]==s.cell[3][3]:\n",
+    "            return s.cell[1][1]\n",
+    "\n",
+    "        if s.cell[1][0]!=BLANK and s.cell[1][0]==s.cell[2][1] and s.cell[2][1]==s.cell[3][2]:\n",
+    "            return s.cell[1][0]\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "    #Check for any blanks\n",
+    "    for i in range(0,4):\n",
+    "        for j in range(0,4):\n",
+    "            if s.cell[i][j]==BLANK:\n",
+    "                return 0\n",
+    "            \n",
+    "    return TIE\n",
+    "            \n",
+    "        \n",
+    "        \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59cc1070",
+   "id": "45fee7d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Is  terminal function\n",
+    "#Add human player functionalities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "387318f2",
    "metadata": {},
    "outputs": [],
    "source": []
