--- a/Rubik's Flip.ipynb
+++ b/Rubik's Flip.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "b32f47b3",
+   "id": "279a9d07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "683978db",
+   "id": "6c39bf48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "9fa3b4e7",
+   "id": "a74b505c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "bb8f4791",
+   "id": "5bbfe874",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "0a5c5cb1",
+   "id": "25c288f3",
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "id": "a37d0e55",
+   "id": "9a2e1cba",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "id": "f5630605",
+   "id": "c5b42b3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 191,
-   "id": "2c80d858",
+   "id": "98ef6788",
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "5ac5fbdd",
+   "id": "4effe114",
    "metadata": {},
    "outputs": [
     {
@@ -301,8 +301,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
-   "id": "1b976337",
+   "execution_count": 241,
+   "id": "069fd835",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
     }
    ],
    "source": [
-    "#Flippable fucntion\n",
+    "#Flippable fucntion- returns true if there is a valid neighbour where you can flip to and also a list of valid neighbours in a list\n",
     "print_State(current_State)\n",
     "def isFlippable(state,userType):\n",
     "    if userType==USER_RED or userType==USER_BLUE:\n",
@@ -369,24 +369,102 @@
     "            operator.col=neighbour[1]\n",
     "            if isValidMove(state, operator):\n",
     "                valid_Neighbours.append(neighbour)\n",
+    "                list_neighbours.append(neighbour)\n",
     "\n",
     "#             print(valid_Neighbours)\n",
-    "        list_neighbours.append(valid_Neighbours)\n",
+    "#         list_neighbours.append(valid_Neighbours)\n",
     "\n",
     "#         print(list_neighbours)\n",
+    "#         print(len(list_neighbours[0]))\n",
+    "#     print(list_neighbours)\n",
+    "#     print(len(list_neighbours))\n",
     "    if len(list_neighbours)!=0:\n",
-    "        return 1\n",
+    "        return [1,list_neighbours]\n",
     "    elif len(list_neighbours)==0:\n",
     "        return 0\n",
     "        \n",
-    "print(isFlippable(current_State, PROGRAM_WHITE))\n",
+    "print(isFlippable(current_State, PROGRAM_WHITE)[0])\n",
     "print_State(current_State)"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "d356f96c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#returns true if the user can flip the provided tile to the given new place\n",
+    "#Creates neighbours of given tile and then check if they are valid neighbours to flip and if the given operator is in valid neighbors return true\n",
+    "def isValidFlip(state, tiletoFlip, flipRow, flipCol, operator, userType):\n",
+    "    #check if it's your own tile, if it is return false\n",
+    "    if userType==1 or userType==2:\n",
+    "        if tileToFlip==1 or tiletoFlip==2:\n",
+    "            return 0\n",
+    "            \n",
+    "    if userType==3 or userType==4:\n",
+    "        if tiletoFlip==3 or tiletoFlip==4:\n",
+    "            return 0\n",
+    "    \n",
+    "    \n",
+    "#     list_neighbours=[]\n",
+    "   \n",
+    "    up=flipRow-1\n",
+    "    down=flipRow+1\n",
+    "    left=flipCol-1\n",
+    "    right=flipCol+1\n",
+    "\n",
+    "    neighbours=[[flipRow, left], [flipRow, right], [up, flipCol],[down,flipCol]]\n",
+    "\n",
+    "    print(neighbours)\n",
+    "    \n",
+    "    flipArea=[operator.row, operator.col]\n",
+    "\n",
+    "    #make a tile and its neighbour(create a object of each opponent tile and make a list)\n",
+    "    #now findValidneighbours\n",
+    "\n",
+    "    #Now check if the neighbors are valid\n",
+    "    valid_Neighbours=[]\n",
+    "    for neighbour in neighbours:\n",
+    "        operator.row=neighbour[0]\n",
+    "        operator.col=neighbour[1]\n",
+    "        if isValidMove(state, operator):\n",
+    "            valid_Neighbours.append(neighbour)\n",
+    "#             list_neighbours.append(neighbour)\n",
+    "    \n",
+    "    if flipArea in valid_Neighbours:\n",
+    "        return 1\n",
+    "\n",
+    "    return 0\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 248,
+   "id": "566dad50",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=[[1,2],[3,4]]\n",
+    "y=[1,2]\n",
+    "if y in x:\n",
+    "    print(1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 187,
-   "id": "e343daeb",
+   "id": "75f6708a",
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": 182,
-   "id": "b104e2b2",
+   "id": "f8b9bc49",
    "metadata": {},
    "outputs": [
     {
@@ -544,19 +622,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
-   "id": "041fc3d9",
+   "execution_count": 230,
+   "id": "09d5afd6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------------\n",
+      "| Y | Y | Y | Y |\n",
+      "------------------\n",
+      "| Y | Y | Y | Y |\n",
+      "------------------\n",
+      "| Y | Y | Y | Y |\n",
+      "------------------\n",
+      "| Y | Y | Y |   |\n",
+      "------------------\n"
+     ]
+    }
+   ],
    "source": [
+    "#Creating a test state\n",
+    "new_cell=[[]]\n",
+    "new_cell=[[4 for i in range(4)] for i in range(4)]\n",
+    "test_State=State() \n",
+    "test_State.cell=new_cell\n",
+    "\n",
+    "test_State.cell[3][3]=0\n",
+    "print_State(test_State)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 242,
+   "id": "fd8e5959",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(isFlippable(test_State,PROGRAM_YELLOW)[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
+   "id": "6f0039fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#currently returns winning value if the provided userType can't be flipped\n",
     "def isTerminal(s):\n",
     "    #if white:\n",
     "        #check if blue/red flippable(locked):\n",
     "        #if blue/red locked:\n",
     "            #check for at least 3 in a row for blue/red\n",
     "        #check isTerminal everytime after one flips and inserts \n",
-    "    userType=USER_RED\n",
-    "    if not isFlippable(s,userType):\n",
+    "    userType=PROGRAM_YELLOW\n",
+    "    if not isFlippable(s,userType)[0]:\n",
     "        for line in range(0,4):\n",
     "            #check for row completion\n",
     "            if s.cell[line][0]!=BLANK and s.cell[line][0]==s.cell[line][1] and s.cell[line][1]==s.cell[line][2]:\n",
@@ -610,25 +748,139 @@
     "            \n",
     "    return TIE\n",
     "            \n",
+    "#Test isTerminal by giving it some example boards\n",
+    "print(isTerminal(test_State))\n",
     "        \n",
     "        \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "45fee7d8",
+   "execution_count": 238,
+   "id": "1fed785a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please tell the row of the tile you want to flip? (Row 1-4): 1\n",
+      "Please tell the column of the tile you want to flip? (Row 1-4): 1\n",
+      "0\n",
+      "Please input the row where you want to flip? (Row 1-4): 13\n",
+      "Please input the column where you want to flip? (Row 1-4): 1\n",
+      "Now, please input your move:\n",
+      "Row (1-4): \n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-238-63aa6cf5aa23>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Now, please input your move:\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m \u001b[0mrowMove\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Row (1-4): \"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     18\u001b[0m \u001b[0mcolMove\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Col (1-4): \"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+     ]
+    }
+   ],
    "source": [
-    "#Is  terminal function\n",
-    "#Add human player functionalities"
+    "#Add human player function\n",
+    "#User turn\n",
+    "\n",
+    "#Ask for input to flip- check if it's a valid tile(not your tile), check if you can flip the tile to the given space. if yes flip\n",
+    "#check in flippable functions whose turn and tile  \n",
+    "\n",
+    "while true:\n",
+    "    flipRow=int(input(\"Please tell the row of the tile you want to flip? (Row 1-4): \"))-1\n",
+    "    flipCol=int(input(\"Please tell the column of the tile you want to flip? (Row 1-4): \"))-1\n",
+    "\n",
+    "    if current_State.cell[flipRow][flipCol]==3 or current_State.cell[flipRow][flipCol]==4:\n",
+    "        tiletoFlip=current_State.cell[flipRow][flipCol]\n",
+    "        break\n",
+    "    print(\"It's not a valid tile, please input another tile to flip!\")\n",
+    "\n",
+    "while true:\n",
+    "    flipToRow=int(input(\"Please input the row where you want to flip? (Row 1-4): \"))-1\n",
+    "    flipToCol=int(input(\"Please input the column where you want to flip? (Row 1-4): \"))-1\n",
+    "    \n",
+    "    operator.row=flipToRow\n",
+    "    operator.col=flipToCol\n",
+    "    if(isValidFlip(current_State,tiletoFlip,flipRow, flipCol, operator,USER_RED)):\n",
+    "        #flip the valid color-make the move and set the current tile to blank\n",
+    "        \n",
+    "        \n",
+    "    \n",
+    "# def isValidFlip(state, tiletoFlip, operator, userType):\n",
+    "    \n",
+    "#check if it's not your tile to flip\n",
+    "            \n",
+    "#Ask for user imput to move, check if valid move and move            \n",
+    "while true:\n",
+    "    print(\"Please input your move:\")\n",
+    "    rowMove=int(input(\"Row (1-4): \"))-1\n",
+    "    colMove=int(input(\"Col (1-4): \"))-1\n",
+    "    \n",
+    "\n",
+    "    operator.row=rowMove\n",
+    "    operator.col=colMove\n",
+    "    \n",
+    "    if isValidMove(current_State, operator):\n",
+    "        break\n",
+    "    print(\"It's not a valid move, please input another move!\")\n",
+    "        \n",
+    "while True:\n",
+    "    faceColor=input(\"Which face do you want to place? (Red/Blue): \")\n",
+    "    if faceColor=\"Red\":\n",
+    "        userType=\"USER_RED\"\n",
+    "        break\n",
+    "    elif faceColor=\"Blue\":\n",
+    "        userType=\"USER_BLUE\"\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\"Please enter a valid face color!\")\n",
+    "\n",
+    "makeMove(current_State,operator, userType)\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "\n",
+    "    \n",
+    "\n",
+    "\n",
+    "    \n",
+    "# In the end check if terminal and break- check where else you can check terminal case and look out for other small cases\n",
+    "    \n",
+    "\n",
+    "# operator.row=int(in)\n",
+    "# # print(\"Please tell the column of the tile you want to flip\")\n",
+    "# flipRow=0\n",
+    "# flipCol=1\n",
+    "\n",
+    "# operator=Operator()\n",
+    "# operator.row=3\n",
+    "# operator.col=2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "387318f2",
+   "id": "b3bef071",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Is  terminal function\n",
+    "#Add human player functionalities\n",
+    "#def isValidFLip\n",
+    "#def is Validneighbour"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b116fe3c",
    "metadata": {},
    "outputs": [],
    "source": []
