Implemented flip asking input from user

--- a/Rubik's Flip.ipynb
+++ b/Rubik's Flip.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "279a9d07",
+   "id": "de5db71a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "6c39bf48",
+   "id": "bc58fad3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "a74b505c",
+   "id": "cc5bbf9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "5bbfe874",
+   "id": "c0ee4d1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "25c288f3",
+   "id": "2724cdb5",
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "id": "9a2e1cba",
+   "id": "4da8ff38",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "id": "c5b42b3a",
+   "id": "a0948769",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 191,
-   "id": "98ef6788",
+   "id": "c4054d75",
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "4effe114",
+   "id": "20e14ab0",
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 241,
-   "id": "069fd835",
+   "id": "c699de90",
    "metadata": {},
    "outputs": [
     {
@@ -389,17 +389,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d356f96c",
+   "execution_count": 265,
+   "id": "52fe23ee",
    "metadata": {},
    "outputs": [],
    "source": [
     "#returns true if the user can flip the provided tile to the given new place\n",
     "#Creates neighbours of given tile and then check if they are valid neighbours to flip and if the given operator is in valid neighbors return true\n",
-    "def isValidFlip(state, tiletoFlip, flipRow, flipCol, operator, userType):\n",
+    "def isValidFlip(state,tiletoFlip,flipRow,flipCol,operator,userType):\n",
     "    #check if it's your own tile, if it is return false\n",
     "    if userType==1 or userType==2:\n",
-    "        if tileToFlip==1 or tiletoFlip==2:\n",
+    "        if tiletoFlip==1 or tiletoFlip==2:\n",
     "            return 0\n",
     "            \n",
     "    if userType==3 or userType==4:\n",
@@ -416,7 +416,7 @@
     "\n",
     "    neighbours=[[flipRow, left], [flipRow, right], [up, flipCol],[down,flipCol]]\n",
     "\n",
-    "    print(neighbours)\n",
+    "#     print(neighbours)\n",
     "    \n",
     "    flipArea=[operator.row, operator.col]\n",
     "\n",
@@ -443,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": 248,
-   "id": "566dad50",
+   "id": "a69c427b",
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "75f6708a",
+   "id": "358d486e",
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": 182,
-   "id": "f8b9bc49",
+   "id": "f7945645",
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": 230,
-   "id": "09d5afd6",
+   "id": "827d00bf",
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 242,
-   "id": "fd8e5959",
+   "id": "cde4648b",
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": 235,
-   "id": "6f0039fb",
+   "id": "26d1f2c6",
    "metadata": {},
    "outputs": [
     {
@@ -756,32 +756,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
-   "id": "1fed785a",
+   "execution_count": null,
+   "id": "5aac4e48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#function to just flip\n",
+    "def flip(state, current_user, opponent, currentTile, flipToRow, flipToCol):\n",
+    "    #check if valid flip and flip looking at flip code below\n",
+    "    \n",
+    "#     if not isValidMove(state, operator): #do this for valid flip\n",
+    "#         return 0\n",
+    "\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 264,
+   "id": "a91cdf54",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please tell the row of the tile you want to flip? (Row 1-4): 1\n",
-      "Please tell the column of the tile you want to flip? (Row 1-4): 1\n",
-      "0\n",
-      "Please input the row where you want to flip? (Row 1-4): 13\n",
+      "------------------\n",
+      "|   |   |   |   |\n",
+      "------------------\n",
+      "|   | Y |   |   |\n",
+      "------------------\n",
+      "|   | Y |   | R |\n",
+      "------------------\n",
+      "|   |   | B |   |\n",
+      "------------------\n",
+      "Please tell the row of the tile you want to flip? (Row 1-4): 2\n",
+      "Please tell the column of the tile you want to flip? (Row 1-4): 2\n",
+      "Please input the row where you want to flip? (Row 1-4): 2\n",
       "Please input the column where you want to flip? (Row 1-4): 1\n",
-      "Now, please input your move:\n",
-      "Row (1-4): \n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-238-63aa6cf5aa23>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Now, please input your move:\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m \u001b[0mrowMove\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Row (1-4): \"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     18\u001b[0m \u001b[0mcolMove\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Col (1-4): \"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+      "[[1, 0], [1, 2], [0, 1], [2, 1]]\n",
+      "------------------\n",
+      "|   |   |   |   |\n",
+      "------------------\n",
+      "| W |   |   |   |\n",
+      "------------------\n",
+      "|   | Y |   | R |\n",
+      "------------------\n",
+      "|   |   | B |   |\n",
+      "------------------\n"
      ]
     }
    ],
@@ -792,23 +814,37 @@
     "#Ask for input to flip- check if it's a valid tile(not your tile), check if you can flip the tile to the given space. if yes flip\n",
     "#check in flippable functions whose turn and tile  \n",
     "\n",
-    "while true:\n",
+    "print_State(current_State)\n",
+    "\n",
+    "while True:\n",
     "    flipRow=int(input(\"Please tell the row of the tile you want to flip? (Row 1-4): \"))-1\n",
     "    flipCol=int(input(\"Please tell the column of the tile you want to flip? (Row 1-4): \"))-1\n",
     "\n",
+    "    #check if it's an opponent's tile\n",
     "    if current_State.cell[flipRow][flipCol]==3 or current_State.cell[flipRow][flipCol]==4:\n",
     "        tiletoFlip=current_State.cell[flipRow][flipCol]\n",
     "        break\n",
     "    print(\"It's not a valid tile, please input another tile to flip!\")\n",
     "\n",
-    "while true:\n",
+    "while True:\n",
     "    flipToRow=int(input(\"Please input the row where you want to flip? (Row 1-4): \"))-1\n",
     "    flipToCol=int(input(\"Please input the column where you want to flip? (Row 1-4): \"))-1\n",
     "    \n",
     "    operator.row=flipToRow\n",
     "    operator.col=flipToCol\n",
+    "  \n",
     "    if(isValidFlip(current_State,tiletoFlip,flipRow, flipCol, operator,USER_RED)):\n",
-    "        #flip the valid color-make the move and set the current tile to blank\n",
+    "        #if it's a yellow tile, flip to white and vice versa\n",
+    "        if tiletoFlip==3:\n",
+    "            current_State.cell[flipToRow][flipToCol]=4\n",
+    "            current_State.cell[flipRow][flipCol]=0\n",
+    "            break\n",
+    "        elif tiletoFlip==4:\n",
+    "            current_State.cell[flipToRow][flipToCol]=3\n",
+    "            current_State.cell[flipRow][flipCol]=0\n",
+    "            break\n",
+    "    else:\n",
+    "        print(\"Invalid flip, please input again\")\n",
     "        \n",
     "        \n",
     "    \n",
@@ -817,7 +853,7 @@
     "#check if it's not your tile to flip\n",
     "            \n",
     "#Ask for user imput to move, check if valid move and move            \n",
-    "while true:\n",
+    "while True:\n",
     "    print(\"Please input your move:\")\n",
     "    rowMove=int(input(\"Row (1-4): \"))-1\n",
     "    colMove=int(input(\"Col (1-4): \"))-1\n",
@@ -843,7 +879,8 @@
     "\n",
     "makeMove(current_State,operator, userType)\n",
     "\n",
-    "    \n",
+    "\n",
+    "print_State(current_State)   \n",
     "    \n",
     "    \n",
     "\n",
@@ -866,8 +903,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 261,
+   "id": "c1ca2de7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 250,
+   "id": "07c7e17f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------------\n",
+      "|   |   |   |   |\n",
+      "------------------\n",
+      "|   | Y |   |   |\n",
+      "------------------\n",
+      "|   | Y |   | R |\n",
+      "------------------\n",
+      "|   |   | B |   |\n",
+      "------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_State(current_State)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
+   "id": "a317793d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 0, 0, 0], [0, 4, 0, 0], [0, 4, 0, 1], [0, 0, 2, 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cell)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b3bef071",
+   "id": "060af12b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,7 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b116fe3c",
+   "id": "7fb95c0c",
    "metadata": {},
    "outputs": [],
    "source": []
