Added Human player vs human player game mode

--- a/Rubik's Flip.ipynb
+++ b/Rubik's Flip.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "de5db71a",
+   "id": "04dd4ba4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "bc58fad3",
+   "id": "d48de5d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "cc5bbf9f",
+   "id": "95003598",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,8 +59,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
-   "id": "c0ee4d1b",
+   "execution_count": 276,
+   "id": "129b844b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,8 +72,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
-   "id": "2724cdb5",
+   "execution_count": 277,
+   "id": "f93ff4be",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
        "[[0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0]]"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 277,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "id": "4da8ff38",
+   "id": "cefd59ac",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "id": "a0948769",
+   "id": "34e807ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 191,
-   "id": "c4054d75",
+   "id": "938f1bdd",
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "20e14ab0",
+   "id": "7858c466",
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 241,
-   "id": "c699de90",
+   "id": "26f5b9cb",
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 265,
-   "id": "52fe23ee",
+   "id": "c88ba308",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": 248,
-   "id": "a69c427b",
+   "id": "02bb2eaf",
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "358d486e",
+   "id": "2fcf1822",
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": 182,
-   "id": "f7945645",
+   "id": "bf3f3396",
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": 230,
-   "id": "827d00bf",
+   "id": "a52f421b",
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 242,
-   "id": "cde4648b",
+   "id": "25adb471",
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": 235,
-   "id": "26d1f2c6",
+   "id": "37dc9cf1",
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +757,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5aac4e48",
+   "id": "1562d60f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,8 +773,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
-   "id": "a91cdf54",
+   "execution_count": 297,
+   "id": "7bc29994",
    "metadata": {},
    "outputs": [
     {
@@ -782,27 +782,22 @@
      "output_type": "stream",
      "text": [
       "------------------\n",
-      "|   |   |   |   |\n",
+      "| R | B |   |   |\n",
       "------------------\n",
-      "|   | Y |   |   |\n",
-      "------------------\n",
-      "|   | Y |   | R |\n",
-      "------------------\n",
-      "|   |   | B |   |\n",
-      "------------------\n",
-      "Please tell the row of the tile you want to flip? (Row 1-4): 2\n",
-      "Please tell the column of the tile you want to flip? (Row 1-4): 2\n",
-      "Please input the row where you want to flip? (Row 1-4): 2\n",
-      "Please input the column where you want to flip? (Row 1-4): 1\n",
-      "[[1, 0], [1, 2], [0, 1], [2, 1]]\n",
+      "|   |   | R |   |\n",
       "------------------\n",
       "|   |   |   |   |\n",
       "------------------\n",
-      "| W |   |   |   |\n",
+      "|   |   |   |   |\n",
       "------------------\n",
-      "|   | Y |   | R |\n",
       "------------------\n",
-      "|   |   | B |   |\n",
+      "| R | B |   |   |\n",
+      "------------------\n",
+      "|   |   | R |   |\n",
+      "------------------\n",
+      "|   |   |   |   |\n",
+      "------------------\n",
+      "|   |   |   |   |\n",
       "------------------\n"
      ]
     }
@@ -815,76 +810,56 @@
     "#check in flippable functions whose turn and tile  \n",
     "\n",
     "print_State(current_State)\n",
+    "def human_flip(turn):\n",
+    "    while True:\n",
+    "        flipRow=int(input(\"Please tell the row of the tile you want to flip? (Row 1-4): \"))-1\n",
+    "        flipCol=int(input(\"Please tell the column of the tile you want to flip? (Row 1-4): \"))-1\n",
     "\n",
-    "while True:\n",
-    "    flipRow=int(input(\"Please tell the row of the tile you want to flip? (Row 1-4): \"))-1\n",
-    "    flipCol=int(input(\"Please tell the column of the tile you want to flip? (Row 1-4): \"))-1\n",
+    "        #check if it's an opponent's tile\n",
+    "        if turn==USER_RED or turn==USER_BLUE:\n",
+    "            if current_State.cell[flipRow][flipCol]==3 or current_State.cell[flipRow][flipCol]==4:\n",
+    "                tiletoFlip=current_State.cell[flipRow][flipCol]\n",
+    "                break\n",
+    "        elif turn==PROGRAM_WHITE or turn==PROGRAM_YELLOW:\n",
+    "            if current_State.cell[flipRow][flipCol]==1 or current_State.cell[flipRow][flipCol]==2:\n",
+    "                tiletoFlip=current_State.cell[flipRow][flipCol]\n",
+    "                break         \n",
     "\n",
-    "    #check if it's an opponent's tile\n",
-    "    if current_State.cell[flipRow][flipCol]==3 or current_State.cell[flipRow][flipCol]==4:\n",
-    "        tiletoFlip=current_State.cell[flipRow][flipCol]\n",
-    "        break\n",
-    "    print(\"It's not a valid tile, please input another tile to flip!\")\n",
+    "        print(\"It's not a valid tile, please input another tile to flip!\")\n",
     "\n",
-    "while True:\n",
-    "    flipToRow=int(input(\"Please input the row where you want to flip? (Row 1-4): \"))-1\n",
-    "    flipToCol=int(input(\"Please input the column where you want to flip? (Row 1-4): \"))-1\n",
-    "    \n",
-    "    operator.row=flipToRow\n",
-    "    operator.col=flipToCol\n",
-    "  \n",
-    "    if(isValidFlip(current_State,tiletoFlip,flipRow, flipCol, operator,USER_RED)):\n",
-    "        #if it's a yellow tile, flip to white and vice versa\n",
-    "        if tiletoFlip==3:\n",
-    "            current_State.cell[flipToRow][flipToCol]=4\n",
-    "            current_State.cell[flipRow][flipCol]=0\n",
-    "            break\n",
-    "        elif tiletoFlip==4:\n",
-    "            current_State.cell[flipToRow][flipToCol]=3\n",
-    "            current_State.cell[flipRow][flipCol]=0\n",
-    "            break\n",
-    "    else:\n",
-    "        print(\"Invalid flip, please input again\")\n",
+    "    while True:\n",
+    "        flipToRow=int(input(\"Please input the row where you want to flip? (Row 1-4): \"))-1\n",
+    "        flipToCol=int(input(\"Please input the column where you want to flip? (Row 1-4): \"))-1\n",
+    "\n",
+    "        operator.row=flipToRow\n",
+    "        operator.col=flipToCol\n",
+    "\n",
+    "        if(isValidFlip(current_State,tiletoFlip,flipRow, flipCol, operator,turn)):\n",
+    "            #if it's a yellow tile, flip to white and vice versa\n",
+    "            if tiletoFlip==3:\n",
+    "                current_State.cell[flipToRow][flipToCol]=4\n",
+    "                current_State.cell[flipRow][flipCol]=0\n",
+    "                break\n",
+    "            elif tiletoFlip==4:\n",
+    "                current_State.cell[flipToRow][flipToCol]=3\n",
+    "                current_State.cell[flipRow][flipCol]=0\n",
+    "                break\n",
+    "            elif tiletoFlip==1:\n",
+    "                current_State.cell[flipToRow][flipToCol]=2\n",
+    "                current_State.cell[flipRow][flipCol]=0\n",
+    "                break\n",
+    "            elif tiletoFlip==2:\n",
+    "                current_State.cell[flipToRow][flipToCol]=1\n",
+    "                current_State.cell[flipRow][flipCol]=0\n",
+    "                break\n",
+    "                \n",
+    "        else:\n",
+    "            print(\"Invalid flip, please input again\")\n",
     "        \n",
     "        \n",
-    "    \n",
-    "# def isValidFlip(state, tiletoFlip, operator, userType):\n",
-    "    \n",
-    "#check if it's not your tile to flip\n",
-    "            \n",
-    "#Ask for user imput to move, check if valid move and move            \n",
-    "while True:\n",
-    "    print(\"Please input your move:\")\n",
-    "    rowMove=int(input(\"Row (1-4): \"))-1\n",
-    "    colMove=int(input(\"Col (1-4): \"))-1\n",
-    "    \n",
     "\n",
-    "    operator.row=rowMove\n",
-    "    operator.col=colMove\n",
-    "    \n",
-    "    if isValidMove(current_State, operator):\n",
-    "        break\n",
-    "    print(\"It's not a valid move, please input another move!\")\n",
-    "        \n",
-    "while True:\n",
-    "    faceColor=input(\"Which face do you want to place? (Red/Blue): \")\n",
-    "    if faceColor=\"Red\":\n",
-    "        userType=\"USER_RED\"\n",
-    "        break\n",
-    "    elif faceColor=\"Blue\":\n",
-    "        userType=\"USER_BLUE\"\n",
-    "        break\n",
-    "    else:\n",
-    "        print(\"Please enter a valid face color!\")\n",
+    "print_State(current_State) \n",
     "\n",
-    "makeMove(current_State,operator, userType)\n",
-    "\n",
-    "\n",
-    "print_State(current_State)   \n",
-    "    \n",
-    "    \n",
-    "\n",
-    "    \n",
     "\n",
     "\n",
     "    \n",
@@ -903,16 +878,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
-   "id": "c1ca2de7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 250,
-   "id": "07c7e17f",
+   "execution_count": 294,
+   "id": "7a0a5d11",
    "metadata": {},
    "outputs": [
     {
@@ -920,13 +887,196 @@
      "output_type": "stream",
      "text": [
       "------------------\n",
+      "|   | B |   |   |\n",
+      "------------------\n",
+      "|   |   | R |   |\n",
+      "------------------\n",
       "|   |   |   |   |\n",
       "------------------\n",
-      "|   | Y |   |   |\n",
+      "|   |   |   |   |\n",
       "------------------\n",
-      "|   | Y |   | R |\n",
       "------------------\n",
-      "|   |   | B |   |\n",
+      "|   | B |   |   |\n",
+      "------------------\n",
+      "|   |   | R |   |\n",
+      "------------------\n",
+      "|   |   |   |   |\n",
+      "------------------\n",
+      "|   |   |   |   |\n",
+      "------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Human move\n",
+    "print_State(current_State) \n",
+    "\n",
+    "#Ask for user imput to move, check if valid move and move            \n",
+    "def humanMove_P1(): #args as state and turn\n",
+    "    while True:\n",
+    "        print(\"Please input your move:\")\n",
+    "        rowMove=int(input(\"Row (1-4): \"))-1\n",
+    "        colMove=int(input(\"Col (1-4): \"))-1\n",
+    "\n",
+    "\n",
+    "        operator.row=rowMove\n",
+    "        operator.col=colMove\n",
+    "\n",
+    "        if isValidMove(current_State, operator):\n",
+    "            break\n",
+    "        print(\"It's not a valid move, please input another move!\")\n",
+    "\n",
+    "    while True:\n",
+    "        faceColor=input(\"Which face do you want to place? (Red/Blue): \")\n",
+    "        if faceColor==\"Red\":\n",
+    "            userType=USER_RED\n",
+    "            break\n",
+    "        elif faceColor==\"Blue\":\n",
+    "            userType=USER_BLUE\n",
+    "            break\n",
+    "        else:\n",
+    "            print(\"Please enter a valid face color!\")\n",
+    "\n",
+    "\n",
+    "    makeMove(current_State,operator, userType)\n",
+    "\n",
+    "\n",
+    "print_State(current_State)   \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 295,
+   "id": "370d73bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def humanMove_P2():\n",
+    "    while True:\n",
+    "        print(\"Please input your move:\")\n",
+    "        rowMove=int(input(\"Row (1-4): \"))-1\n",
+    "        colMove=int(input(\"Col (1-4): \"))-1\n",
+    "\n",
+    "\n",
+    "        operator.row=rowMove\n",
+    "        operator.col=colMove\n",
+    "\n",
+    "        if isValidMove(current_State, operator):\n",
+    "            break\n",
+    "        print(\"It's not a valid move, please input another move!\")\n",
+    "\n",
+    "    while True:\n",
+    "        faceColor=input(\"Which face do you want to place? (White/Yellow): \")\n",
+    "        if faceColor==\"White\":\n",
+    "            userType=PROGRAM_WHITE\n",
+    "            break\n",
+    "        elif faceColor==\"Yellow\":\n",
+    "            userType=PROGRAM_YELLOW\n",
+    "            break\n",
+    "        else:\n",
+    "            print(\"Please enter a valid face color!\")\n",
+    "\n",
+    "\n",
+    "    makeMove(current_State,operator, userType)    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d4f5879",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def humanVhuman():\n",
+    "    print(\"Lets play the game! The first player will be Player 1 and second player will be Player 2\")\n",
+    "    print(\"Player 1 has dice Red/Blue and Player 2 has dice White/Yellow\")\n",
+    "    print(\"Player 1 goes first!\")\n",
+    "\n",
+    "    print_State(current_State)\n",
+    "\n",
+    "    #First move\n",
+    "    turn=1\n",
+    "    userType=USER_RED\n",
+    "    humanMove_P1()\n",
+    "    turn=2\n",
+    "    print_State(current_State)  \n",
+    "    \n",
+    "    #Play until terminal state\n",
+    "    while True:\n",
+    "        if turn==1:\n",
+    "            print(\"It's Player 1's turn\")\n",
+    "            userType=USER_RED\n",
+    "            human_flip(userType)\n",
+    "            print_State(current_State)\n",
+    "            humanMove_P1()\n",
+    "            turn=2\n",
+    "            print_State(current_State)\n",
+    "\n",
+    "        elif turn==2:\n",
+    "            print(\"It's Player 2's turn\")\n",
+    "            userType=PROGRAM_WHITE\n",
+    "            human_flip(userType)\n",
+    "            print_State(current_State)\n",
+    "            humanMove_P2()\n",
+    "            turn=1\n",
+    "            print_State(current_State)\n",
+    "        \n",
+    "        print()\n",
+    "        print(\"-------------------------------------------\")\n",
+    "        finalResult=isTerminal(current_State)\n",
+    "        if finalResult:\n",
+    "            if finalResult==1 or finalResult==2:\n",
+    "                print(\"Player 1 with dice Red/Blue wins\")\n",
+    "            elif finalResult==3 or finalResult==4:\n",
+    "                print(\"Player 2 with dice White/Yellow wins\")\n",
+    "            elif finalResult==5:\n",
+    "                print(\"TIE!\")\n",
+    "                \n",
+    "        if isTerminal(current_State):\n",
+    "            break\n",
+    "        \n",
+    "        \n",
+    "            \n",
+    "humanVhuman()\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38b02e5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Implement human-human\n",
+    "#Implement random-random\n",
+    "#Impelement human and random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 280,
+   "id": "7dcccf10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------------\n",
+      "|   | B |   |   |\n",
+      "------------------\n",
+      "|   |   | R |   |\n",
+      "------------------\n",
+      "|   |   |   |   |\n",
+      "------------------\n",
+      "|   |   |   |   |\n",
       "------------------\n"
      ]
     }
@@ -937,15 +1087,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
-   "id": "a317793d",
+   "execution_count": 274,
+   "id": "92d1c1c9",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0, 0, 0, 0], [0, 4, 0, 0], [0, 4, 0, 1], [0, 0, 2, 0]]\n"
+      "[[4, 'USER_RED', 0, 0], ['USER_BLUE', 'USER_BLUE', 'USER_BLUE', 0], [0, 4, 0, 1], [0, 0, 2, 0]]\n"
      ]
     }
    ],
@@ -956,20 +1106,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "060af12b",
+   "id": "7a43fd98",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Is  terminal function\n",
     "#Add human player functionalities\n",
     "#def isValidFLip\n",
-    "#def is Validneighbour"
+    "#def is Validneighbour\n",
+    "\n",
+    "#Check for case when you can place \"invalid\" tile(\"USER_RED\",\"dffd\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fb95c0c",
+   "id": "5ce0945d",
    "metadata": {},
    "outputs": [],
    "source": []
